<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>stereolbm_cpu</name>
  <version>0.3.0</version>
  <description>A trivial vector-add example (NO ROS USED) that serves
    as a baseline for development and debugging. The computation
    sends two integer vectors and adds them.

    Vector add operations are offloaded into to the FPGA. The offloading
    operation into the FPGA (or to the Programmable Logic (PL)).
  </description>
  <maintainer email="victorma@xilinx.com">Víctor Mayoral Vilches</maintainer>
  <license>Apache License 2.0</license>
  <author email="victorma@xilinx.com">Víctor Mayoral Vilches</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>vitis_common</build_depend>
  <build_depend>rclcpp</build_depend>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_vitis</buildtool_depend>
  <buildtool_depend>ament_cuda</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>rclcpp_components</depend>
  <depend>rcutils</depend>
  <depend>sensor_msgs</depend>
  <depend>tracetools_image_pipeline</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>



  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
